Fix color contrast

--- a/src/DotNetEpicsWeb/wwwroot/css/site.css
+++ b/src/DotNetEpicsWeb/wwwroot/css/site.css
@@ -262,7 +262,6 @@ app {
     }
 
     .gh-issue-kind.epic {
-        color: black;
         background-color: #c6415a;
     }
 
